# beach_waste_path_planning

./: .dockerignore  .gitignore  README.md
.claude/projects/-home-devpc-Documents-titulo-2026-beach-waste-path-planning/memory/: MEMORY.md  feedback_no_coauthor.md  project_context.md  ref_turtlebot4_package.md  user_profile.md
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/beach_robot_custom_ekf/: CMakeLists.txt  package.xml
src/beach_robot_custom_ekf/config/: ekf_params.yaml
src/beach_robot_custom_ekf/launch/: ekf_custom.launch.py
src/beach_robot_custom_ekf/src/: ekf_imu_gps.cpp
src/beach_robot_description/: CMakeLists.txt  package.xml
src/beach_robot_description/config/: bridge.yaml  joy_ps4.yaml
src/beach_robot_description/launch/: display.launch.py  gazebo.launch.py  teleop.launch.py
src/beach_robot_description/rviz/: display.rviz
src/beach_robot_description/urdf/: beach_robot.urdf.xacro  gazebo.xacro
src/beach_robot_description/worlds/: beach_empty.sdf
src/beach_robot_localization/: CMakeLists.txt  package.xml
src/beach_robot_localization/config/: ekf.yaml  navsat.yaml
src/beach_robot_localization/launch/: dual_ekf_navsat.launch.py
