<?xml version="1.0"?>
<package format="3">
  <name>beach_robot_description</name>
  <version>0.0.1</version>
  <description>URDF, Gazebo Harmonic config, and launch files for the beach waste collection robot.</description>

  <maintainer email="alvaro@roboticairsystems.com">alvaro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
